# inoutlists

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish-to-test-pypi.yml
inoutlists/: OFAC_Id_Types.csv  UN_consolidated.xsd  __init__.py  country_ISO_codes.csv  country_names.csv  dumpers.py  loaders.py
tests/: context.py  lists_mapper.py
tests/.data/: ofac_consolidated.csv  ofac_consolidated.json  un.csv  un.json  un_consolidated.xml
tests/integration/: __init__.py  settings.py  test_full_inout.py
tests/integration/fixtures/: consolidated.xml  xml.xsd
tests/unit/: test_loader_class.py  test_res_files.py
