[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "inoutlists"
version = "0.0.2"
requires-python = ">=3.8"
dependencies = [
  "pandas>=2.2.2",
  "lxml>=5.2.2",
  "requests>=2.32.2"
]
description = "A package to map different sources of lists, for example OFAC, to a common interface and dump the mapped data to several formats (JSON, CSV, etc)."
authors = [
    {name = "Eusebio José de la Torre Niño", email = "ej.torre.nino@gmail.com"}
]
maintainers = [
    {name = "Eusebio José de la Torre Niño", email = "ej.torre.nino@gmail.com"}
]
readme = "README.md"
license = {file = "LICENSE"}
keywords = [
    "sanctions", 
    "record linkage", 
    "deduplication", 
    "entity resolution", 
    "OFAC", 
    "lists", 
    "map", 
    "normalization"
]
classifiers = [    
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",    
    "Operating System :: OS Independent",
]

[project.urls]
repository = "https://github.com/ejtorre/inoutlists"